# flam-

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/detectionapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  SimpleTextureRenderer.cpp  SimpleTextureRenderer.h  native-lib.cpp
app/src/main/java/com/example/detectionapp/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/detectionapp/: ExampleUnitTest.kt
app/src/web/: index.html  package-lock.json  package.json  tsconfig.json
app/src/web/src/: index.ts
gradle/wrapper/: gradle-wrapper.properties
